# my-public-ip

./: LICENSE.txt  MANIFEST.in  Makefile  README.md  pyproject.toml
src/my_public_ip/: main.py
tests/: test_my_public_ip.py
